# datasmith-contoso-assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  OPTION_2_ELEVATED_RESEARCH.md  PROJECT_DECISIONS_AND_CLARIFICATIONS.md  README.md  RESEARCH_DISSERTATION_OPTIONS.md  START_HERE.md  VIVA_DEMO_SCRIPT.md  VIVA_PREP_12_DAY_PLAN.md  VIVA_PREP_OUTLINE.md  VIVA_WHITEBOARD.md  render.yaml
backend/: CLAUDE.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  compliance.py  insight_detector.py  memory.py  messages.py  orchestrator.py  planner_chain.py  router.py  specialists.py  state.py  viz_selector.py
backend/app/ambiguity/: __init__.py  resolver.py  scorer.py
backend/app/api/: __init__.py  main.py  models.py
backend/app/baselines/: __init__.py  mac_sql.py
backend/app/composer/: __init__.py  composer.py
backend/app/conversation/: __init__.py  builder.py  references.py
backend/app/db/: __init__.py  duckdb.py  postgres.py  redis_adapter.py
backend/app/eval/: __init__.py  metrics.py
backend/app/llm/: __init__.py  config.py  provider.py  token_tracker.py
backend/app/schema/: __init__.py  domains.py  domains.yaml  glossary.py  glossary.yaml  introspection.py  joins.py  metadata.py  search.py
backend/app/temporal/: __init__.py  expressions.py  fiscal.py  parser.py
backend/app/validator/: __init__.py  business.py  execution.py  pipeline.py  syntax.py
backend/data/: contoso_schema.json
backend/tests/: conftest.py  test_agent_compliance.py  test_agent_memory.py  test_agent_messages.py  test_agent_orchestrator.py  test_agent_router.py  test_agent_specialists.py  test_agent_state.py  test_ambiguity.py  test_compliance_v2.py  test_composer.py  test_contoso_pipeline.py  test_conversation_builder.py  test_db_adapters.py  test_eval_metrics.py  test_llm_config.py  test_llm_provider.py  test_multiturn_pipeline.py  test_references.py  test_schema_domains.py  test_schema_glossary.py  test_schema_joins.py  test_schema_metadata.py  test_schema_search.py  test_temporal.py  test_token_tracker.py  test_validator.py
backend/tests/api/: test_main.py
frontend/: CLAUDE.md  (+4 more)
(+103 files in other folders)
