[project]
name = "scm-nl2sql-backend"
version = "0.1.0"
description = "Domain-Aware Multi-Agent NL-to-SQL for Enterprise Supply Chain Intelligence"
requires-python = ">=3.11"
authors = [{ name = "Aniruddha Prakash Kawarase", email = "2024aa05175@bits-pilani.ac.in" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "duckdb>=1.1",
  "redis>=5.1",
  "sqlglot>=25.0",
  "pyyaml>=6.0",
  "tenacity>=9.0",
  "python-dotenv>=1.0",
  "mlflow>=2.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "respx>=0.21",
  "types-redis",
  "types-PyYAML",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = ["S101", "S603", "S607"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
markers = [
  "integration: requires running DBs (postgres/redis/duckdb)",
  "llm: requires LLM provider (mocked unless --live-llm)",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py"]
